handle multiple dataTypes in ui

--- a/static/index.html
+++ b/static/index.html
@@ -74,7 +74,7 @@
                     const th1 = document.createElement('th');
                     th1.textContent = jsonData[key]["type"];
                     const th2 = document.createElement('th');
-                    th2.textContent = "value"
+                    th2.textContent = jsonData[key]["vtypes"]
 
                     headerRow.appendChild(th1);
                     headerRow.appendChild(th2);
